--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
-  "name": "anime-level-api",
+  "name": "sasuke-api",
   "version": "1.0.0",
-  "description": "API to generate anime-style level progress images",
+  "description": "API to generate user progress images with a Sasuke Uchiha theme.",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "canvas": "^2.11.2"
-  },
-  "engines": {
-    "node": "18.x"
+    "canvas": "^2.9.0",
+    "express": "^4.17.1"
   }
 }
