--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
-  "name": "my-api-project",
+  "name": "anime-progress-api",
   "version": "1.0.0",
-  "description": "API to generate user progress images",
+  "description": "API لعرض مستوى المستخدم بتصميم مستوحى من الأنمي",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "canvas": "^2.11.2"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
+    "canvas": "^2.11.0"
   }
 }
